<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img2"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/lufga_bold"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:gravity="start|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/inputs_back"
        android:drawableStart="@drawable/email"
        android:drawablePadding="6dp"
        android:fontFamily="@font/lufga_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="6dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/inputs_back"
        android:drawableStart="@drawable/password"
        android:drawablePadding="6dp"
        android:fontFamily="@font/lufga_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="6dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/lufga_semi_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/button_back"
        android:fontFamily="@font/lufga_medium"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/referToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/lufga_semi_bold"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/referToSignUp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/lufga_semi_bold"
            android:text="@string/sign_up"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>